--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-navbar></app-navbar>
-
-<router-outlet></router-outlet>
+<div class="flex flex-col h-screen">
+  <app-navbar></app-navbar>
+  <div class="h-full w-full">
+    <router-outlet></router-outlet>
+  </div>
+</div>
