--- a/src/app/components/book-form/book-form.component.html
+++ b/src/app/components/book-form/book-form.component.html
@@ -1,1 +1,18 @@
-<p>book-form works!</p>
+<div class="h-full w-full flex ">
+    <div class="w-2/5 h-full flex justify-center items-center">
+        <img src="assets/images/Forms-bro.png" alt="boy-with-form">
+    </div>
+    <div class="w-3/5 h-full p-2 border flex flex-col items-center">
+        <h1 class="text-4xl text-center">Add Books:-</h1>
+        <form class="w-11/12 h-full border border-red-500 border-solid">
+            <label for="title">Title :-</label>
+            <input type="text" id="title" placeholder="Title" name="title" value="">
+            <label for="title">Title :-</label>
+            <input type="text" id="title" placeholder="Title" name="title" value="">
+            <label for="title">Title :-</label>
+            <input type="text" id="title" placeholder="Title" name="title" value="">
+            <label for="title">Title :-</label>
+            <input type="text" id="title" placeholder="Title" name="title" value="">
+        </form>
+    </div>
+</div>
